# utils

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  utils.h
.github/workflows/: utils-build.yml  utils-tests.yml
exceptions/: CMakeLists.txt
exceptions/src/cpp/: exception.hh
logger/: CMakeLists.txt  LOGGER.md
logger/src/cpp/: logger.hh
misc/: Utilities.cpp  WindowsHelpers.cpp
parsers/: CMakeLists.txt
parsers/src/cpp/: json_parser.cc  json_parser.hh
parsers/test/config/: json_parser_test.json
parsers/test/cpp/: json_parser_test.cc
patterns/: CMakeLists.txt
patterns/creational/builder/: BUILDER.md  builder_role.hh  concrete_builder_role.hh  director_role.hh
sockets/: Comm.cpp  Comm.h  Message.cpp  Message.h  Sockets.cpp  Sockets.h
stopwatch/: Stopwatch.h
structures/: CMakeLists.txt
structures/arrays/src/cpp/: array.hh  container.hh
structures/arrays/tests/config/: array_test_conf.json  array_test_constructors.json  array_test_functions.json  array_test_iterators.json  array_test_operators.json  container_test_operators.json
structures/arrays/tests/cpp/: array_test.cc  container_test.cc
structures/builder/src/cpp/: structures_builder.hh  structures_director.hh
structures/config/: logger_conf.json
structures/graphs/src/cpp/: edge.hh  graph.hh  vertex.hh
structures/graphs/src/cpp/builder/: graph_builder.hh  graph_concrete_builder.hh  graph_director.hh  weighted_graph_builder.hh
structures/graphs/src/cpp/linked_lists/: double_linked_list.hh  single_linked_list.hh
structures/graphs/src/cpp/trees/: tree.hh
structures/graphs/tests/config/: graph_test_functions.json
structures/graphs/tests/config/linked_lists/: linked_lists_test_functions.json
structures/graphs/tests/config/trees/: trees_test_functions.json
structures/graphs/tests/cpp/: graph_test.cc  linked_list_test.cc  tree_test.cc
structures/graphs/tests/cpp/helpers/: graph_test_helper.hh
structures/maps/src/cpp/: map.hh  pair.hh
structures/maps/tests/config/: map_test_function.json
structures/maps/tests/cpp/: maps_test.cc
structures/queues/: BlockingQueue.h
structures/queues/src/cpp/: queue.hh
structures/queues/tests/config/: queue_test_functions.json
structures/queues/tests/cpp/: queue_test.cc
structures/sets/src/cpp/: set.hh
structures/sets/tests/config/: set_test_functions.json
structures/sets/tests/cpp/: sets_test.cc
structures/stacks/src/cpp/: stack.hh
structures/stacks/tests/config/: stack_test_functions.json
structures/stacks/tests/cpp/: stack_test.cc
time/: CMakeLists.txt
time/src/cpp/: time.hh
validate/: CMakeLists.txt
validate/src/cpp/: validate.hh
validator/: CMakeLists.txt
validator/src/cpp/: validator.hh
