#exceptions lib definition
set(UTILS_EXCEPTION_LIBRARY_NAME exceptions)
add_library(${UTILS_EXCEPTION_LIBRARY_NAME} INTERFACE)
target_include_directories(${UTILS_EXCEPTION_LIBRARY_NAME} INTERFACE src/cpp/)

set(UTILS_EXCEPTION_LIBRARY_NAME ${UTILS_EXCEPTION_LIBRARY_NAME} PARENT_SCOPE)

install(TARGETS ${UTILS_EXCEPTION_LIBRARY_NAME} DESTINATION exceptions/include)
