#exceptions lib definition
set(UTILS_EXCEPTION_LIBRARY_NAME exceptions)
set(UTILS_EXCEPTION_LIBRARY_NAME ${UTILS_EXCEPTION_LIBRARY_NAME} PARENT_SCOPE)
add_library(${UTILS_EXCEPTION_LIBRARY_NAME} INTERFACE)

set(UTILS_EXCEPTION_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/)
set(UTILS_EXCEPTION_INCLUDE_DIRS ${UTILS_EXCEPTION_INCLUDE_DIRS} PARENT_SCOPE)
target_include_directories(${UTILS_EXCEPTION_LIBRARY_NAME} INTERFACE ${UTILS_EXCEPTION_INCLUDE_DIRS})

install(TARGETS ${UTILS_EXCEPTION_LIBRARY_NAME} DESTINATION exceptions/include)
