#logger target definition
message(DEBUG "Creating LOGGER target")
set(LOGGER_LIBRARY_NAME logger)
set(LOGGER_LIBRARY_NAME ${LOGGER_LIBRARY_NAME} PARENT_SCOPE)
add_library(${LOGGER_LIBRARY_NAME} INTERFACE)

set(LOGGER_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/)
set(LOGGER_INCLUDE_DIRS ${LOGGER_INCLUDE_DIRS} PARENT_SCOPE)
target_include_directories(${LOGGER_LIBRARY_NAME} INTERFACE ${LOGGER_INCLUDE_DIRS} ${PARSERS_INCLUDE_DIRS} ${TIME_INCLUDE_DIRS})
target_link_libraries(${LOGGER_LIBRARY_NAME} PRIVATE ${PARSERS_LIBRARY_NAME} )

message(DEBUG "Finished creating LOGGER target")

file(GLOB LOGGER_HEADERS ${LOGGER_INCLUDE_DIRS}/*.hh)
install(FILES ${LOGGER_HEADERS} DESTINATION logger/include)
