#validate target definition
message(DEBUG "Creating VALIDATE target")
set(VALIDATE_LIBRARY_NAME validate)
set(VALIDATE_LIBRARY_NAME ${VALIDATE_LIBRARY_NAME} PARENT_SCOPE)
add_library(${VALIDATE_LIBRARY_NAME} INTERFACE)

set(VALIDATE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/)
set(VALIDATE_INCLUDE_DIRS ${VALIDATE_INCLUDE_DIRS} PARENT_SCOPE)
target_include_directories(${VALIDATE_LIBRARY_NAME} INTERFACE ${VALIDATE_INCLUDE_DIRS} ${PARSERS_INCLUDE_DIRS})
target_link_libraries(${VALIDATE_LIBRARY_NAME} INTERFACE ${UTILS_EXCEPTION_LIBRARY_NAME} ${PARSERS_LIBRARY_NAME})

message(DEBUG "Finished creating VALIDATE target")

file(GLOB VALIDATE_HEADERS ${VALIDATE_INCLUDE_DIRS}/*.hh)
message(DEBUG "List of validate include dir headers: ${VALIDATE_HEADERS}")
install(FILES ${VALIDATE_HEADERS} DESTINATION validate/include)
